@@ -15,7 +15,8 @@ public class CorsConfig {
     public CorsFilter corsFilter() {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowCredentials(true);
-        config.setAllowedOrigins(Arrays.asList("http://localhost:80", "http://127.0.0.1:80", "http://localhost", "http://127.0.0.1"));
+        config.setAllowedOrigins(List.of("*"));
+//        config.setAllowedOrigins(Arrays.asList("http://localhost:80", "http://127.0.0.1:80", "http://localhost", "http://127.0.0.1"));
         config.setAllowedHeaders(List.of("*"));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
